<resources>
    <string name="app_name">EgarAdmin</string>
    <string name="login">Login</string>
    <string name="welcome_again">Welcome again</string>
    <string name="phone">phone</string>
    <string name="enter_phone">Enter phone</string>
    <string name="password">password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="create_an_account">I dont have an account?</string>
    <string name="store_name">Store name</string>
    <string name="text_create_an_account">Create an account</string>
    <string name="store_owner_name">Store owner name</string>
    <string name="commercial_registration_no">Commercial Registration No</string>
    <string name="enter_commercial_registration">Enter Commercial Registration</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="add_a_product">Add a product</string>
    <string name="product_name">product name</string>
    <string name="item">item</string>
    <string name="price">price</string>
    <string name="product_description">Product Description</string>
    <string name="product_image">product image</string>
    <string name="quantity">quantity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    //Headings
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>